cabal-version:       2.4
name:                clash-protocols-memmap
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude

  -- See https://github.com/clash-lang/clash-compiler/pull/2511
  if impl(ghc >= 9.4)
    CPP-Options: -DCLASH_OPAQUE=OPAQUE
  else
    CPP-Options: -DCLASH_OPAQUE=NOINLINE

  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
      -- clash-prelude will set suitable version bounds for the plugins
  build-depends:
    base >= 4.14 && < 4.19,
    clash-prelude >= 1.6 && < 1.10,
    containers >= 0.6 && < 0.8,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

library
  import: common-options
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    BitPackC
    Protocols.MemoryMap
    Protocols.MemoryMap.TypeCollect
    Protocols.MemoryMap.Check
    Protocols.MemoryMap.Check.AbsAddress
    Protocols.MemoryMap.Check.Overlap
    Protocols.MemoryMap.FieldType
    Protocols.MemoryMap.Json
    Internal.HdlTest.UartMock
  build-depends:
    base,
    aeson,
    bytestring >= 0.10 && < 0.13,
    constraints,
    clash-prelude,
    clash-protocols,
    containers,
    template-haskell,

-- XXX: Doesn't really belong in clash-vexriscv-SIM
executable hdl-test
  import: common-options
  main-is: app/HdlTest.hs
  build-Depends:
    base,
    clash-ghc,
    clash-prelude,
    clash-protocols,
    clash-protocols-memmap,
    aeson,
    bytestring,
    containers,
    directory,

executable example
  import: common-options
  main-is: Example.hs
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts "-with-rtsopts=-M100M"
  build-depends:
    base,
    clash-prelude,
    clash-protocols,
    clash-protocols-memmap,
    aeson,
    bytestring,
    containers,
    directory,