cabal-version:       2.4
name:                clash-vexriscv-sim
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
      -- clash-prelude will set suitable version bounds for the plugins
  build-depends:
    base >= 4.14 && < 4.16,
    clash-prelude >= 1.6 && < 1.8,
    containers >= 0.6 && < 0.7,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

library
  import: common-options
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Utils.Cpu
    Utils.Interconnect
    Utils.ProgramLoad
    Utils.ReadElf
    Utils.Storage
  build-depends:
    base,
    clash-prelude,
    clash-protocols,
    clash-vexriscv,
    elf >= 0.31 && < 0.32,
    bytestring >= 0.10 && < 0.11,

executable clash
  import: common-options
  main-is: app/Clash.hs
  build-Depends: base, clash-ghc

executable hdl-test
  import: common-options
  main-is: app/HdlTest.hs
  build-Depends:
    base,
    clash-prelude,
    clash-protocols,
    clash-vexriscv,
    clash-vexriscv-sim,

executable clash-vexriscv-bin
  import: common-options
  main-is: VexRiscvSimulation.hs
  hs-source-dirs: app
  default-language: Haskell2010
  build-depends:
    base,
    clash-prelude,
    clash-protocols,
    clash-vexriscv,
    clash-vexriscv-sim,
    bytestring,
    containers,
    directory,

test-suite unittests
  import: common-options
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: tests.hs
  build-depends:
    base,
    clash-prelude,
    clash-protocols,
    clash-vexriscv,
    clash-vexriscv-sim,
    bytestring,
    containers,
    directory,
    temporary >=1.1 && <1.4,
    tasty >= 1.2 && < 1.5,
    tasty-hunit >= 0.10 && < 0.11,
    filepath
