cabal-version:       2.4
name:                contranomy-sim
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC

data-files:
  devicetree/*.dts

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude

  default-language: Haskell2010

  ghc-options:
    -Wall -Wcompat

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
      -- clash-prelude will set suitable version bounds for the plugins
  build-depends:
    base >= 4.14 && < 4.16,
    clash-prelude >= 1.6 && < 1.7,
    containers >= 0.6 && < 0.7,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat,

  other-modules: Paths_contranomy_sim


library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    ContranomySim.Print
    ContranomySim.ReadElf
    ContranomySim.MemoryMapConsts
    ContranomySim.DeviceTreeCompiler
  build-depends:
    elf >= 0.31 && < 0.32,
    bytestring >= 0.10 && < 0.11,
    process >= 1.6 && < 1.7,
    directory >= 1.3 && < 1.4

executable simcontranomy
  import: common-options
  main-is: SimContranomy.hs
  hs-source-dirs: bin
  build-depends:
    bytestring >= 0.10 && < 0.11,
    contranomy,
    contranomy-sim,

    base,
    containers,
    clash-prelude,
    clash-ghc


test-suite unittests
  import: common-options
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded
  main-is: tests.hs
  other-modules:
    Tests.ContranomySim.ReadElf
    Tests.ContranomySim.Print
    Tests.ContranomySim.FirmwareIntegrationTests
  build-depends:
    contranomy,
    contranomy-sim,
    hedgehog >= 1.0 && < 1.2,
    tasty >= 1.2 && < 1.5,
    tasty-hedgehog >= 1.2 && < 1.3,
    tasty-hunit >= 0.10 && < 0.11,
    bytestring,
    elf,
    temporary >=1.1 && <1.4,
    HUnit >=1.1 && <1.7,
    bytestring,
    directory,
    filepath
