cabal-version:       2.4
name:                elastic-buffer-sim
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- We want to be able to sort imports easily
    -Wprepositive-qualified-module

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.7.0 && < 1.8,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    array,
    bytestring,
    cassava,
    clash-cores,
    containers,
    directory,
    matplotlib,
    random,
    template-haskell
  exposed-modules:
    Bittide.ClockControl
    Bittide.ClockControl.Strategies
    Bittide.ClockControl.Strategies.Callisto
    Bittide.Simulate
    Bittide.Simulate.Ppm
    Bittide.Topology
    Bittide.Topology.Graph
    Bittide.Topology.TH
    Bittide.Topology.TH.Domain
  other-modules:
    Graphics.Matplotlib.Ext
  default-language: Haskell2010

executable sim
  import: common-options
  main-is: exe/Main.hs
  build-depends:
    elastic-buffer-sim,
    docopt
  default-language: Haskell2010
  default-extensions: ImplicitPrelude

test-suite unittests
  import:           common-options
  type:             exitcode-stdio-1.0
  main-is:          unittests.hs
  ghc-options:      -Wall -Wcompat -threaded -with-rtsopts=-N
  default-language: Haskell2010
  hs-source-dirs:   tests
  other-modules:
    Tests.Bittide.Simulate
  build-depends:
      base
    , clash-prelude
    , elastic-buffer-sim
    , tasty
    , tasty-hedgehog
    , tasty-hunit

test-suite doctests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          doctests.hs
  ghc-options:      -threaded
  build-depends:
    base,
    elastic-buffer-sim,
    doctest-parallel >= 0.1
  default-language: Haskell2010
