cabal-version:       2.4
name:                elastic-buffer-sim
version:             0.1
License:             Apache-2.0
license-file:        LICENSE
author:              QBayLogic B.V.
maintainer:          devops@qbaylogic.com
Copyright:           Copyright © 2022-2024 Google LLC

common common-options
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

    -- TemplateHaskell is used to support convenience functions such as
    -- 'listToVecTH' and 'bLit'.
    TemplateHaskell
    QuasiQuotes

    -- Prelude isn't imported by default as Clash offers Clash.Prelude
    NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat
    -haddock

    -- Plugins to support type-level constraint solving on naturals
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver

    -- Clash needs access to the source code in compiled modules
    -fexpose-all-unfoldings

    -- Worker wrappers introduce unstable names for functions that might have
    -- blackboxes attached for them. You can disable this, but be sure to add
    -- a no-specialize pragma to every function with a blackbox.
    -fno-worker-wrapper
  build-depends:
    base,
    Cabal,

    -- clash-prelude will set suitable version bounds for the plugins
    clash-prelude >= 1.7.0 && < 1.10,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat

library
  import: common-options
  hs-source-dirs: src
  build-depends:
    array,
    aeson,
    bittide,
    bittide-experiments,
    bytestring,
    cassava,
    clash-cores,
    containers,
    directory,
    filepath,
    matplotlib,
    random,
    text,
    typelits-witnesses
  exposed-modules:
    Bittide.Domain
    Bittide.Plot
  default-language: Haskell2010

executable sim
  import: common-options
  main-is: exe/Main.hs
  build-depends:
    aeson,
    bittide-experiments,
    bytestring,
    elastic-buffer-sim,
    directory,
    filepath,
    happy-dot,
    optparse-applicative
  default-language: Haskell2010
  default-extensions: ImplicitPrelude
  -- enable rtsopts so we can setup memory limits
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS

executable plot
  import: common-options
  main-is: plot/Main.hs
  build-depends:
    array,
    bittide,
    bittide-experiments,
    bittide-instances,
    bytestring,
    cassava,
    cassava-conduit,
    conduit,
    containers,
    directory,
    elastic-buffer-sim,
    filepath,
    text,
    typelits-witnesses,
    vector
  default-language: Haskell2010
  default-extensions: ImplicitPrelude
  -- enable rtsopts so we can setup memory limits
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-xm20000000 +RTS -xm20000000 -RTS
