# SPDX-FileCopyrightText: 2022 Google LLC
#
# SPDX-License-Identifier: Apache-2.0

[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
