# SPDX-FileCopyrightText: 2024 Google LLC
#
# SPDX-License-Identifier: CC0-1.0


[profile.release]
# Optimize for size
opt-level = "z"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[workspace]
members = [
  "examples/hello",
  "examples/smoltcp_client",

  "test-cases/axi_stream_self_test",
  "test-cases/registerwbc_test",
  "test-cases/capture_ugn_test",
  "test-cases/clock-control-wb",
  "test-cases/dna_port_e2_test",
  "test-cases/scatter_gather_test",
  "test-cases/switch_demo_pe_test",
  "test-cases/switch_calendar_test",
  "test-cases/time_self_test",
  "test-cases/watchdog_test",

  "clock-control",
  "clock-control-swcctopologies",
  "management-unit",
  "processing-element-test",
]
resolver = "2"
