# SPDX-FileCopyrightText: 2024 Google LLC
#
# SPDX-License-Identifier: CC0-1.0


[profile.release]
# Optimize for size
opt-level = "z"
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[workspace]
members = [
  "examples/c_hello",
  "examples/smoltcp_client",

  "sim-tests/addressable_bytes_wb_test",
  "sim-tests/aligned_ringbuffer_test",
  "sim-tests/axi_stream_self_test",
  "sim-tests/registerwb_test",
  "sim-tests/capture_ugn_test",
  "sim-tests/clock-control-wb",
  "sim-tests/dna_port_e2_test",
  "sim-tests/elastic_buffer_wb_test",
  "sim-tests/nested_interconnect_test",
  "sim-tests/wb_to_df_test",
  "sim-tests/scatter_gather_test",
  "sim-tests/switch_demo_pe_test",
  "sim-tests/switch_calendar_test",
  "sim-tests/time_self_test",
  "sim-tests/watchdog_test",
  "sim-tests/c_timer_wb",
  "sim-tests/c_scatter_gather_test",
  "sim-tests/c_registerwb_test",

  "hitl-tests/vexriscv-hello",
  "hitl-tests/clock-board",

  "demos/clock-control",
  "demos/soft-ugn-gppe",
  "demos/soft-ugn-mu",
  "demos/switch-demo1-boot",
  "demos/switch-demo1-mu",
  "demos/switch-demo2-mu",
  "demos/switch-demo2-gppe",
]
resolver = "2"
