# SPDX-FileCopyrightText: 2022 Google LLC
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = [
  "bittide-hal",
  "bittide-hal-c",
  "bittide-macros",
  "bittide-sys",
  "gdb-trace",
  "memmap-generate",
]

resolver = "2"

[workspace.lints.clippy]
format_push_string = "forbid"
print_literal = "forbid"
uninlined_format_args = "forbid"
