# SPDX-FileCopyrightText: 2022 Google LLC
#
# SPDX-License-Identifier: CC0-1.0

[profile.dev]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
incremental = false
lto = true
# Optimize for size
opt-level = "z"
panic = "abort"

[workspace]
members = ["bittide-build-utils",
  "bittide-cpus",
  "bittide-hal",
  "bittide-hal-c",
  "bittide-macros",
  "bittide-sys",
  "gdb-trace",
]

resolver = "2"

[workspace.lints.clippy]
format_push_string = "forbid"
print_literal = "forbid"
uninlined_format_args = "forbid"
