# SPDX-FileCopyrightText: 2025 Google LLC
#
# SPDX-License-Identifier: CC0-1.0
[package]
name = "gdb-adapters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.8"
nusb = "0.1.13"
parking_lot = "0.12.3"
serde_json = "1.0.140"

[dependencies.clap]
version = "4.5.37"
features = ["derive"]

[dependencies.probe-rs]
version = "0.27.0"
features = ["gdb-server"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
